# pico-fatfs-sdio

./: README.md
lib/fatfs/source/: ff.c  ff.h
src/: CMakeLists.txt
src/include/: delays.h  ffconf.h
src/sd_driver/: dma_interrupts.c  sd_card.c  sd_card.h
src/sd_driver/SDIO/: rp2040_sdio.c  sd_card_sdio.c
src/sd_driver/SPI/: sd_card_spi.c  sd_spi.c  sd_spi.h
src/src/: f_util.c  glue.c
